host gets email when a user do booking

--- a/config/application.yml
+++ b/config/application.yml
@@ -1,2 +1,7 @@
 FACEBOOK_KEY: 816245395154372
 FACEBOOK_SECRET: 92ad0d11ec1185f4213c343d5e9ce3fc
+
+# Braintree configuration keys
+BRAINTREE_MERCHANT_ID: 'z54kkd29m8gq6d6s'
+BRAINTREE_PUBLIC_KEY: '8wbgf5dkb4qt2mjs'
+BRAINTREE_PRIVATE_KEY: '345b8a48c14d5fd51f7efe6de99ada88'
