--- a/config/application.yml
+++ b/config/application.yml
@@ -5,3 +5,10 @@ FACEBOOK_SECRET: 92ad0d11ec1185f4213c343d5e9ce3fc
 BRAINTREE_MERCHANT_ID: 'z54kkd29m8gq6d6s'
 BRAINTREE_PUBLIC_KEY: '8wbgf5dkb4qt2mjs'
 BRAINTREE_PRIVATE_KEY: '345b8a48c14d5fd51f7efe6de99ada88'
+
+#gmail credentials
+
+GMAIL_USERNAME: 'ainor.next@gmail.com'
+GMAIL_PASSWORD: 'cracklah'
+ENV['GMAIL_PASSWORD']
+
